--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+    <!-- 导航栏 -->
+    <nav class="navbar">
+        <div class="navbar-logo">
+            <a href="index.html">Tea Sage 茶夫子</a>
+        </div>
+        <ul class="navbar-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <!-- 首页背景和标题 -->
     <header class="hero">
         <div class="hero-content">
