--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,20 @@
+<!-- Navbar / 导航栏 -->
+<div class="navbar">
+    <div class="navbar-logo">
+        <a href="/">Tea Sage 茶夫子</a>
+    </div>
+    <ul class="navbar-links">
+        <li><a href="/">Home / 首页</a></li>
+        <li><a href="/about">About / 关于</a></li>
+        <li><a href="/products">Products / 产品</a></li>
+        <li><a href="/contact">Contact / 联系我们</a></li>
+    </ul>
+</div>
+
+<!-- Contact Page / 联系我们页面 -->
+<div class="contact">
+    <h1>Contact Us / 联系我们</h1>
+
 <div class="contact">
     <h1>Contact Us / 联系我们</h1>
     <p>We would love to hear from you! Please fill in the details below and we will get back to you as soon as possible. / 我们很高兴收到您的来信！请填写以下详细信息，我们将尽快回复您。</p>
