--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,68 @@
-<!-- Navbar / 导航栏 -->
-<div class="navbar">
-    <div class="navbar-logo">
-        <a href="/">Tea Sage 茶夫子</a>
-    </div>
-    <ul class="navbar-links">
-        <li><a href="/">Home / 首页</a></li>
-        <li><a href="/about">About / 关于</a></li>
-        <li><a href="/products">Products / 产品</a></li>
-        <li><a href="/contact">Contact / 联系我们</a></li>
-    </ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tea Sage 茶夫子 - Contact Us / 联系我们</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
 
-<!-- Contact Page / 联系我们页面 -->
+    <!-- Navbar / 导航栏 -->
+    <div class="navbar">
+        <div class="navbar-logo">
+            <a href="/">Tea Sage 茶夫子</a>
+        </div>
+        <ul class="navbar-links">
+            <li><a href="/">Home / 首页</a></li>
+            <li><a href="/about">About / 关于</a></li>
+            <li><a href="/products">Products / 产品</a></li>
+            <li><a href="/contact">Contact / 联系我们</a></li>
+        </ul>
+    </div>
 
-<div class="contact">
-    <h1>Contact Us / 联系我们</h1>
-    <p>We would love to hear from you! Please fill in the details below and we will get back to you as soon as possible. / 我们很高兴收到您的来信！请填写以下详细信息，我们将尽快回复您。</p>
-    
-    <!-- Contact Form / 联系表单 -->
-    <div class="contact-form">
-        <form action="#" method="POST">
-            <div class="form-group">
-                <label for="name">Name / 姓名</label>
-                <input type="text" id="name" name="name" required placeholder="Enter your name / 请输入您的姓名">
-            </div>
-            <div class="form-group">
-                <label for="email">Email / 电子邮件</label>
-                <input type="email" id="email" name="email" required placeholder="Enter your email / 请输入您的电子邮件">
-            </div>
-            <div class="form-group">
-                <label for="message">Message / 留言</label>
-                <textarea id="message" name="message" required placeholder="Enter your message / 请输入您的留言"></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Submit / 提交</button>
-        </form>
-    </div>
-    
-    <!-- Contact Info / 联系信息 -->
-    <div class="contact-info">
-        <div class="info-item">
-            <h3>Phone / 电话</h3>
-            <p>+123 456 7890</p>
+    <!-- Contact Page / 联系我们页面 -->
+    <div class="contact">
+        <h1>Contact Us / 联系我们</h1>
+        <p>We would love to hear from you! Please fill in the details below and we will get back to you as soon as possible. / 我们很高兴收到您的来信！请填写以下详细信息，我们将尽快回复您。</p>
+
+        <!-- Contact Form / 联系表单 -->
+        <div class="contact-form">
+            <form action="your-server-script.php" method="POST">
+                <div class="form-group">
+                    <label for="name">Name / 姓名</label>
+                    <input type="text" id="name" name="name" required placeholder="Enter your name / 请输入您的姓名">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email / 电子邮件</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email / 请输入您的电子邮件">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message / 留言</label>
+                    <textarea id="message" name="message" required placeholder="Enter your message / 请输入您的留言"></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Submit / 提交</button>
+                <button type="reset" class="reset-btn">Clear / 清空</button>
+            </form>
         </div>
-        <div class="info-item">
-            <h3>Address / 地址</h3>
-            <p>123 Tea Avenue, Green City, Country / 绿城市茶道街123号，国家</p>
+
+        <!-- Contact Info / 联系信息 -->
+        <div class="contact-info">
+            <div class="info-item">
+                <h3>Phone / 电话</h3>
+                <p>+123 456 7890</p>
+            </div>
+            <div class="info-item">
+                <h3>Address / 地址</h3>
+                <p>123 Tea Avenue, Green City, Country / 绿城市茶道街123号，国家</p>
+            </div>
         </div>
     </div>
-</div>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2024 Tea Sage 茶夫子. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
