--- a/shop.html
+++ b/shop.html
@@ -3,48 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop | Tea Sage 茶夫子</title>
+    <title>Shop / 商店 | Tea Sage 茶夫子</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <!-- 导航栏 -->
         <div class="navbar">
-            <div class="logo">
+            <div class="navbar-logo">
                 <a href="index.html">Tea Sage 茶夫子</a>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html" class="active">Shop</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <ul class="navbar-links">
+                <li><a href="index.html">Home / 首页</a></li>
+                <li><a href="shop.html" class="active">Shop / 商店</a></li>
+                <li><a href="#about">About / 关于</a></li>
+                <li><a href="#contact">Contact / 联系我们</a></li>
+            </ul>
         </div>
     </header>
 
+    <!-- 商店部分 -->
     <section class="shop">
-        <h2>Our Products</h2>
+        <h2>Our Products / 我们的产品</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="images/tea-cake.jpg" alt="Tea Cake">
-                <h3>Tea Cake</h3>
-                <p>Delicious aged tea cake, perfect for any occasion.</p>
-                <p class="price">69 Yuan</p>
-                <a href="#" class="btn">Buy Now</a>
+                <img src="images/tea-cake.jpg" alt="Tea Cake / 茶饼">
+                <h3>Tea Cake / 茶饼</h3>
+                <p>Delicious aged tea cake, perfect for any occasion. / 美味的陈年茶饼，适合各种场合。</p>
+                <p class="price">69 Yuan / 69元</p>
+                <a href="#" class="btn">Buy Now / 立即购买</a>
             </div>
             <div class="product-card">
-                <img src="images/health-tea.jpg" alt="Men's Health Tea">
-                <h3>Men's Health Tea</h3>
-                <p>Support vitality and energy with this nourishing blend.</p>
-                <p class="price">99 Yuan</p>
-                <a href="#" class="btn">Buy Now</a>
+                <img src="images/health-tea.jpg" alt="Men's Health Tea / 男士养生茶">
+                <h3>Men's Health Tea / 男士养生茶</h3>
+                <p>Support vitality and energy with this nourishing blend. / 增强活力与精力的滋补茶。</p>
+                <p class="price">99 Yuan / 99元</p>
+                <a href="#" class="btn">Buy Now / 立即购买</a>
             </div>
         </div>
     </section>
 
+    <!-- 底部 -->
     <footer>
-        <p>&copy; 2024 Tea Sage 茶夫子. All rights reserved.</p>
+        <p>&copy; 2024 Tea Sage 茶夫子. All rights reserved. / 版权所有。</p>
     </footer>
 </body>
 </html>
