--- a/shop.html
+++ b/shop.html
@@ -16,8 +16,8 @@
             <ul class="navbar-links">
                 <li><a href="index.html">Home / 首页</a></li>
                 <li><a href="shop.html" class="active">Shop / 商店</a></li>
-                <li><a href="#about">About / 关于</a></li>
-                <li><a href="#contact">Contact / 联系我们</a></li>
+                <li><a href="about.html">About / 关于</a></li>
+                <li><a href="contact.html">Contact / 联系我们</a></li>
             </ul>
         </div>
     </header>
