--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
             <a href="/">Tea Sage 茶夫子</a>
         </div>
         <ul class="navbar-links">
-            <li><a href="/">Home / 首页</a></li>
-            <li><a href="/about">About / 关于</a></li>
-            <li><a href="/products">Products / 产品</a></li>
-            <li><a href="/contact">Contact / 联系我们</a></li>
+            <li><a href="index.html/">Home / 首页</a></li>
+            <li><a href="about.html">About / 关于</a></li>
+            <li><a href="shop.html"/Products">Products / 产品</a></li>
+            <li><a href="contact.html"/Contact">Contact / 联系我们</a></li>
         </ul>
     </div>
 
