--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,19 @@
 </head>
 <body>
 
-    <!-- Navbar / 导航栏 -->
-    <div class="navbar">
-        <div class="navbar-logo">
-            <a href="/">Tea Sage 茶夫子</a>
-        </div>
-        <ul class="navbar-links">
-            <li><a href="index.html/">Home / 首页</a></li>
-            <li><a href="about.html">About / 关于</a></li>
-            <li><a href="shop.html"/Products">Products / 产品</a></li>
-            <li><a href="contact.html"/Contact">Contact / 联系我们</a></li>
-        </ul>
+   <!-- Navbar / 导航栏 -->
+<div class="navbar">
+    <div class="navbar-logo">
+        <a href="index.html">Tea Sage 茶夫子</a>
     </div>
+    <ul class="navbar-links">
+        <li><a href="index.html">Home / 首页</a></li>
+        <li><a href="about.html">About / 关于</a></li>
+        <li><a href="shop.html">Products / 产品</a></li>
+        <li><a href="contact.html">Contact / 联系我们</a></li>
+    </ul>
+</div>
+
 
     <!-- Contact Page / 联系我们页面 -->
     <div class="contact">
