--- a/about.html
+++ b/about.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- 导航栏 -->
-    <div class="navbar">
-        <div class="navbar-logo">
-            <a href="index.html">Tea Sage / 茶夫子</a>
-        </div>
-        <ul class="navbar-links">
-            <li><a href="index.html">Home / 首页</a></li>
-            <li><a href="shop.html">Shop / 商店</a></li>
-            <li><a href="about.html" class="active">About / 关于</a></li>
-            <li><a href="contact.html">Contact / 联系我们</a></li>
-        </ul>
+    
+  <!-- Navbar / 导航栏 -->
+<div class="navbar">
+    <div class="navbar-logo">
+        <a href="index.html">Tea Sage 茶夫子</a>
     </div>
+    <ul class="navbar-links">
+        <li><a href="index.html">Home / 首页</a></li>
+        <li><a href="about.html">About / 关于</a></li>
+        <li><a href="shop.html">Products / 产品</a></li>
+        <li><a href="contact.html">Contact / 联系我们</a></li>
+    </ul>
+</div>
 
     <!-- About 页面内容 -->
     <section class="about">
