--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="navbar-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li><a href="shop.html">Product产品</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
