--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 <body>
 
-    <!-- 导航栏 -->
-    <nav class="navbar">
-        <div class="navbar-logo">
-            <a href="index.html">Tea Sage 茶夫子</a>
-        </div>
-        <ul class="navbar-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html">Product产品</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+   <!-- Navbar / 导航栏 -->
+<div class="navbar">
+    <div class="navbar-logo">
+        <a href="index.html">Tea Sage 茶夫子</a>
+    </div>
+    <ul class="navbar-links">
+        <li><a href="index.html">Home / 首页</a></li>
+        <li><a href="about.html">About / 关于</a></li>
+        <li><a href="shop.html">Products / 产品</a></li>
+        <li><a href="contact.html">Contact / 联系我们</a></li>
+    </ul>
+</div>
+
 
     <!-- 首页背景和标题 -->
     <header class="hero">
