--- a/index.html
+++ b/index.html
@@ -21,65 +21,65 @@
     </ul>
 </div>
 
-
-    <!-- 首页背景和标题 -->
+    <!-- Hero Section / 首页背景和标题 -->
     <header class="hero">
         <div class="hero-content">
             <h1>Welcome to Tea Sage 茶夫子</h1>
-            <p>Explore our premium tea collection for health and wellness.</p>
+            <p>Explore our premium tea collection for health and wellness. / 探索我们的优质养生茶系列。</p>
         </div>
     </header>
 
-    <!-- 产品系列 -->
+    <!-- Product Series / 产品系列 -->
     <section class="product-series">
-        <h2>Our Tea Collection</h2>
+        <h2>Our Tea Collection / 我们的茶品系列</h2>
         <div class="series-grid">
             <div class="series-item">
                 <img src="images/tea1.jpg" alt="Tea Series 1">
-                <h3>Herbal Detox</h3>
+                <h3>Herbal Detox / 草本排毒茶</h3>
             </div>
             <div class="series-item">
                 <img src="images/tea2.jpg" alt="Tea Series 2">
-                <h3>Pu'er Tea</h3>
+                <h3>Pu'er Tea / 普洱茶</h3>
             </div>
             <div class="series-item">
                 <img src="images/tea3.jpg" alt="Tea Series 3">
-                <h3>Overtime Relief</h3>
+                <h3>Overtime Relief / 加班缓解茶</h3>
             </div>
         </div>
     </section>
 
-    <!-- 热销产品 -->
+    <!-- Top Selling Products / 热销产品 -->
     <section class="top-selling">
-        <h2>Top Selling Products</h2>
+        <h2>Top Selling Products / 热销产品</h2>
         <div class="top-selling-products">
             <div class="product-card">
                 <img src="images/product1.jpg" alt="Product 1">
-                <h3>Pu'er Tea Cake</h3>
+                <h3>Pu'er Tea Cake / 普洱茶饼</h3>
                 <p>$69</p>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <a href="shop.html" class="btn">Shop Now / 立即购买</a>
             </div>
             <div class="product-card">
                 <img src="images/product2.jpg" alt="Product 2">
-                <h3>Herbal Detox Tea</h3>
+                <h3>Herbal Detox Tea / 草本排毒茶</h3>
                 <p>$15</p>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <a href="shop.html" class="btn">Shop Now / 立即购买</a>
             </div>
             <div class="product-card">
                 <img src="images/product3.jpg" alt="Product 3">
-                <h3>Overtime Relief Tea</h3>
+                <h3>Overtime Relief Tea / 加班缓解茶</h3>
                 <p>$20</p>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <a href="shop.html" class="btn">Shop Now / 立即购买</a>
             </div>
         </div>
     </section>
 
-    <!-- 底部logo和品牌名 -->
+    <!-- Footer / 底部 -->
     <footer>
         <div class="brand-logo">
             <img src="images/logo.png" alt="Tea Sage Logo">
             <p>Tea Sage 茶夫子</p>
         </div>
+        <p>&copy; 2024 Tea Sage 茶夫子. All Rights Reserved. / 版权所有。</p>
     </footer>
 
     <script src="js/main.js"></script>
