--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Welcome to Tea Sage 茶夫子</h1>
-            <p>Explore our premium tea collection for health and wellness. / 探索我们的优质养生茶系列。</p>
+            <p>Explore our premium tea collection for health and wellness. </p>
+            <p>探索我们的优质养生茶系列。不仅如此，还有调理身体的茶 </p>
         </div>
     </header>
 
