--- a/shop.html
+++ b/shop.html
@@ -31,17 +31,24 @@
         <h2>Our Products / 我们的产品</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="images/tea-cake.jpg" alt="Tea Cake / 茶饼">
+                <img src="images/product1.jpg" alt="Tea Cake / 茶饼">
                 <h3>Tea Cake / 茶饼</h3>
                 <p>Delicious aged tea cake, perfect for any occasion. / 美味的陈年茶饼，适合各种场合。</p>
                 <p class="price">69 Yuan / 69元</p>
                 <a href="#" class="btn">Buy Now / 立即购买</a>
             </div>
             <div class="product-card">
-                <img src="images/health-tea.jpg" alt="Men's Health Tea / 男士养生茶">
+                <img src="images/product3.jpg" alt="Men's Health Tea / 男士养生茶">
                 <h3>Men's Health Tea / 男士养生茶</h3>
                 <p>Support vitality and energy with this nourishing blend. / 增强活力与精力的滋补茶。</p>
                 <p class="price">99 Yuan / 99元</p>
+                <a href="#" class="btn">Buy Now / 立即购买</a>
+            </div>
+             <div class="product-card">
+                <img src="images/product2.jpg" alt="养身调理茶 / 健康茶">
+                <h3>Tea Cake / 茶饼</h3>
+                <p>Well packed small tea-bag. Drink it everyday  /各种身体问题都能通过每天一包茶来慢慢调理。</p>
+                <p class="price">25 Yuan / 25元</p>
                 <a href="#" class="btn">Buy Now / 立即购买</a>
             </div>
         </div>
