--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <h3>Herbal Detox / 草本排毒茶</h3>
             </div>
             <div class="series-item">
-                <img src="images/tea2.jpg" alt="Tea Series 2">
-                <h3>Pu'er Tea / 普洱茶</h3>
+                <img src="images/tea3.jpg" alt="Tea Series 2">
+                <h3>Tea leaf / 罐装茶叶</h3>
             </div>
             <div class="series-item">
-                <img src="images/tea3.jpg" alt="Tea Series 3">
-                <h3>Overtime Relief / 加班缓解茶</h3>
+                <img src="images/tea2.jpg" alt="Tea Series 3">
+                <h3>Overtime Relief Tea Bag / 熬夜调理茶包 </h3>
             </div>
         </div>
     </section>
