--- a/index.html
+++ b/index.html
@@ -74,6 +74,38 @@
         </div>
     </section>
 
+    <!-- Customer Reviews / 客户评论 -->
+<section class="customer-reviews">
+    <h2>Customer Reviews / 客户评价</h2>
+    <div class="reviews-container">
+        <!-- Review 1 -->
+        <div class="review-card">
+            <img src="images/review1.jpg" alt="Customer 1" class="review-photo">
+            <div class="review-content">
+                <h3>SallyLee</h3>
+                <p class="review-comment">"This tea is amazing! It really helped me with my late-night work sessions. Highly recommend!"</p>
+            </div>
+        </div>
+        <!-- Review 2 -->
+        <div class="review-card">
+            <img src="images/review2.jpg" alt="Customer 2" class="review-photo">
+            <div class="review-content">
+                <h3>JanelChong</h3>
+                <p class="review-comment">"价格可以，买了一个月的配套调理，感觉身体不会那么疲惫了 第二天起床也满有精神"</p>
+            </div>
+        </div>
+        <!-- Review 3 -->
+        <div class="review-card">
+            <img src="images/review3.jpg" alt="Customer 3" class="review-photo">
+            <div class="review-content">
+                <h3>W.KekHoong</h3>
+                <p class="review-comment">"Excellent quality! I’ve been drinking it daily, and my digestion has improved a lot."</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
     <!-- Footer / 底部 -->
     <footer>
         <div class="brand-logo">
