--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <div class="series-grid">
             <div class="series-item">
                 <img src="images/tea1.jpg" alt="Tea Series 1">
-                <h3>Herbal Detox / 草本排毒茶</h3>
+                <h3>Tea Cake / 陈年茶饼</h3>
             </div>
             <div class="series-item">
                 <img src="images/tea3.jpg" alt="Tea Series 2">
-                <h3>Tea leaf / 罐装茶叶</h3>
+                <h3>Teas / 罐装茶叶</h3>
             </div>
             <div class="series-item">
                 <img src="images/tea2.jpg" alt="Tea Series 3">
-                <h3>Overtime Relief Tea Bag / 熬夜调理茶包 </h3>
+                <h3>Overtime Relief Teabags / 熬夜调理茶包 </h3>
             </div>
         </div>
     </section>
